--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,32 +7,20 @@
 /* Wrapper */
 
 	#wrapper {
-		@include vendor('display', 'flex');
-		@include vendor('flex-direction', 'row-reverse');
-		@include vendor('transition', 'opacity #{_duration(menu)} ease');
-		margin: 0 auto;
-		max-width: 100%;
-		opacity: 1;
-		padding: (_size(section-spacing) * 1.5);
-		width: 90em;
+		> * {
+			> .inner {
+				$gutter: _size(gutter);
 
-		body.is-menu-visible & {
-			opacity: 0.15;
-		}
+				width: 100%;
+				max-width: _size(inner);
+				margin: 0 auto;
+				padding: 0 $gutter;
 
-		@include breakpoint('<=xlarge') {
-			padding: _size(section-spacing);
-		}
+				@include breakpoint('<=small') {
+					$gutter: _size(gutter) * 0.5;
 
-		@include breakpoint('<=large') {
-			display: block;
-		}
-
-		@include breakpoint('<=small') {
-			padding: _size(section-spacing-small);
-		}
-
-		body.single & {
-			display: block;
+					padding: 0 $gutter;
+				}
+			}
 		}
 	}
